--- a/dashboard-usuarios/package.json
+++ b/dashboard-usuarios/package.json
@@ -11,7 +11,9 @@
     "start": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "faker": "^5.5.3",
     "json-server": "^1.0.0-beta.3",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
