--- a/dashboard-usuarios/package.json
+++ b/dashboard-usuarios/package.json
@@ -11,6 +11,7 @@
     "start": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.8.0",
     "faker": "^5.5.3",
     "json-server": "^1.0.0-beta.3",
     "lodash": "^4.17.21",
