--- a/dashboard-usuarios/package.json
+++ b/dashboard-usuarios/package.json
@@ -16,7 +16,8 @@
     "json-server": "^1.0.0-beta.3",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
